--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-probandomodificando esto
+Este repositorio es una demostración
+para el curso de Modelos de Desarrollo de Software
+ITCR - 1° Semestre 2010
